--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,8 @@
 # Avoid your project being littered with annoying .DS_Store files!
 .DS_Store
 .prettierignore
+
+# Files not needed for deployment
+.init_README.md
+.README-template.md
+.style-guide.md
